# versync

./: LICENSE  README.md  __main__.py  pyproject.toml
versync/: __main__.py
versync/feature_extraction/: gnn_preprocessing.py  ida_acfg_disas.py  ida_acfg_features.py
versync/machine_learning/: __init__.py  attention.py  build_dataset.py  build_model.py  config.py  gnn_model.py  graph_aggregator.py  graph_embedding_net.py  graph_encoder.py  graph_factory_base.py  graph_factory_inference.py  graph_factory_testing.py  graph_factory_training.py  graph_factory_utils.py  graph_matching_network.py  graph_prop_layer.py  loss.py  model_evaluation.py  similarities.py
